[gd_scene load_steps=45 format=3 uid="uid://bywwqlhh28osg"]

[ext_resource type="Script" uid="uid://cvwnft7r6y6qk" path="res://Scripts/level_select.gd" id="1_2sqnl"]
[ext_resource type="Texture2D" uid="uid://cc2c1y0tud5dc" path="res://ComPuzzle Assets/Menus/Menu.png" id="2_2sqnl"]
[ext_resource type="Script" uid="uid://ckoujrs6j34k4" path="res://Scripts/grid_container.gd" id="3_lx4vd"]
[ext_resource type="Texture2D" uid="uid://dt486tghau1hj" path="res://ComPuzzle Assets/buttons/Menu_Button.png" id="4_72w8f"]
[ext_resource type="Texture2D" uid="uid://c7vvoxlkighff" path="res://ComPuzzle Assets/Menus/Level.png" id="4_s6o25"]
[ext_resource type="Texture2D" uid="uid://dwen37q7uai3f" path="res://ComPuzzle Assets/Menus/Level2.png" id="5_kb5mc"]
[ext_resource type="Texture2D" uid="uid://cdh62ox8ds5kw" path="res://ComPuzzle Assets/Menus/Level1_Locked.png" id="5_u7mn1"]
[ext_resource type="Texture2D" uid="uid://cwbaaviddwenm" path="res://ComPuzzle Assets/Menus/Level3.png" id="6_kb5mc"]
[ext_resource type="Texture2D" uid="uid://c55g4ljemvp5t" path="res://ComPuzzle Assets/Menus/Level2_Locked.png" id="7_4rr2f"]
[ext_resource type="Texture2D" uid="uid://bwtg3774k64pl" path="res://ComPuzzle Assets/Menus/Level4.png" id="7_qnihq"]
[ext_resource type="Texture2D" uid="uid://rrqfluv04cgy" path="res://ComPuzzle Assets/Menus/Level5.png" id="8_npf18"]
[ext_resource type="Texture2D" uid="uid://dfspi3sfou08y" path="res://ComPuzzle Assets/Menus/Level6.png" id="9_bpfon"]
[ext_resource type="Texture2D" uid="uid://wy61t037l3oj" path="res://ComPuzzle Assets/Menus/Level3_Locked.png" id="9_nw6ri"]
[ext_resource type="Texture2D" uid="uid://dcd2xpaxdbms0" path="res://ComPuzzle Assets/Menus/Level7.png" id="10_07bvh"]
[ext_resource type="Texture2D" uid="uid://drnbsas6bvnbv" path="res://ComPuzzle Assets/Menus/Level4_Locked.png" id="11_4rr2f"]
[ext_resource type="Texture2D" uid="uid://tsf0jhj8gktg" path="res://ComPuzzle Assets/Menus/Level8.png" id="11_ciagn"]
[ext_resource type="Texture2D" uid="uid://bpb0ie41fqapk" path="res://ComPuzzle Assets/Menus/Level9.png" id="12_yx562"]
[ext_resource type="Texture2D" uid="uid://cklc3xaa01llp" path="res://ComPuzzle Assets/Menus/Level5_Locked.png" id="13_d12ud"]
[ext_resource type="Texture2D" uid="uid://cdfoip7k61vu4" path="res://ComPuzzle Assets/Menus/Level10.png" id="13_wn3si"]
[ext_resource type="Texture2D" uid="uid://bvogl35rmr7xd" path="res://ComPuzzle Assets/Menus/Level11.png" id="14_r2u0r"]
[ext_resource type="Texture2D" uid="uid://cgb4u0l5lyea8" path="res://ComPuzzle Assets/Menus/Level12.png" id="15_h2rck"]
[ext_resource type="Texture2D" uid="uid://ek16c7np3av2" path="res://ComPuzzle Assets/Menus/Level6_Locked.png" id="15_vsj2i"]
[ext_resource type="Texture2D" uid="uid://yjuvjj2stw28" path="res://ComPuzzle Assets/Menus/Level13.png" id="16_y1k4n"]
[ext_resource type="Texture2D" uid="uid://3dc2ok7qye2u" path="res://ComPuzzle Assets/Menus/Level7_Locked.png" id="17_ugnhi"]
[ext_resource type="Texture2D" uid="uid://bf66n7pdmn8si" path="res://ComPuzzle Assets/Menus/Level14.png" id="17_y5eva"]
[ext_resource type="Texture2D" uid="uid://df7i71q7evyvs" path="res://ComPuzzle Assets/Menus/Level15.png" id="18_l15rd"]
[ext_resource type="Texture2D" uid="uid://yuykog0mb5xc" path="res://ComPuzzle Assets/Menus/Level16.png" id="19_gfib2"]
[ext_resource type="Texture2D" uid="uid://rsxqpcckc12c" path="res://ComPuzzle Assets/Menus/Level8_Locked.png" id="19_tk44e"]
[ext_resource type="Texture2D" uid="uid://bio1sub41b1ly" path="res://ComPuzzle Assets/Menus/Level17.png" id="20_gqox3"]
[ext_resource type="Texture2D" uid="uid://cr7po4tecs1jv" path="res://ComPuzzle Assets/Menus/Level9_Locked.png" id="21_jcinf"]
[ext_resource type="Texture2D" uid="uid://bytbyi21flu17" path="res://ComPuzzle Assets/Menus/Level17_Locked.png" id="21_kymir"]
[ext_resource type="Texture2D" uid="uid://d3h2jswwpppv3" path="res://ComPuzzle Assets/Menus/Level18.png" id="21_ps72n"]
[ext_resource type="Texture2D" uid="uid://67v2ycaxo0bc" path="res://ComPuzzle Assets/Menus/Level19.png" id="22_1j2gv"]
[ext_resource type="Texture2D" uid="uid://b8cw44vbnf5ts" path="res://ComPuzzle Assets/Menus/Level20.png" id="23_a6n8w"]
[ext_resource type="Texture2D" uid="uid://dp57mph04ytii" path="res://ComPuzzle Assets/Menus/Level18_Locked.png" id="23_lfb2g"]
[ext_resource type="Texture2D" uid="uid://db58puipnfrll" path="res://ComPuzzle Assets/Menus/Level10_Locked.png" id="23_tlx2j"]
[ext_resource type="Texture2D" uid="uid://srdipmunf0py" path="res://ComPuzzle Assets/Menus/Level19_Locked.png" id="25_j2b11"]
[ext_resource type="Texture2D" uid="uid://ddqaca4p70heh" path="res://ComPuzzle Assets/Menus/Level11_Locked.png" id="25_sii5o"]
[ext_resource type="Texture2D" uid="uid://bwqhyuiiun5om" path="res://ComPuzzle Assets/Menus/Level12_Locked.png" id="27_d7gog"]
[ext_resource type="Texture2D" uid="uid://cyl3nbf7glvv5" path="res://ComPuzzle Assets/Menus/Level20_Locked.png" id="27_u7mn1"]
[ext_resource type="Texture2D" uid="uid://qjivwq0dp6pg" path="res://ComPuzzle Assets/Menus/Level13_Locked.png" id="29_jcinf"]
[ext_resource type="Texture2D" uid="uid://ujlubpvm663b" path="res://ComPuzzle Assets/Menus/Level14_Locked.png" id="31_tlx2j"]
[ext_resource type="Texture2D" uid="uid://yp621gthaedx" path="res://ComPuzzle Assets/Menus/Level15_Locked.png" id="33_sii5o"]
[ext_resource type="Texture2D" uid="uid://caesow32t45l7" path="res://ComPuzzle Assets/Menus/Level16_Locked.png" id="35_d7gog"]

[node name="Level_Select" type="Node2D"]
script = ExtResource("1_2sqnl")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_2sqnl")

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 223.0
offset_top = 160.0
offset_right = 1707.0
offset_bottom = 928.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 320
theme_override_constants/v_separation = 32
columns = 4
script = ExtResource("3_lx4vd")

[node name="map 1" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("4_s6o25")
texture_disabled = ExtResource("5_u7mn1")

[node name="map 2" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("5_kb5mc")
texture_disabled = ExtResource("7_4rr2f")

[node name="map 3" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("6_kb5mc")
texture_disabled = ExtResource("9_nw6ri")

[node name="map 4" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("7_qnihq")
texture_disabled = ExtResource("11_4rr2f")

[node name="map 5" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("8_npf18")
texture_disabled = ExtResource("13_d12ud")

[node name="map 6" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("9_bpfon")
texture_disabled = ExtResource("15_vsj2i")

[node name="map 7" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("10_07bvh")
texture_disabled = ExtResource("17_ugnhi")

[node name="map 8" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("11_ciagn")
texture_disabled = ExtResource("19_tk44e")

[node name="map 9" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("12_yx562")
texture_disabled = ExtResource("21_jcinf")

[node name="map 10" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("13_wn3si")
texture_disabled = ExtResource("23_tlx2j")

[node name="map 11" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("14_r2u0r")
texture_disabled = ExtResource("25_sii5o")

[node name="map 12" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("15_h2rck")
texture_disabled = ExtResource("27_d7gog")

[node name="map 13" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("16_y1k4n")
texture_disabled = ExtResource("29_jcinf")

[node name="map 14" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("17_y5eva")
texture_disabled = ExtResource("31_tlx2j")

[node name="map 15" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("18_l15rd")
texture_disabled = ExtResource("33_sii5o")

[node name="map 16" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("19_gfib2")
texture_disabled = ExtResource("35_d7gog")

[node name="map 17" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("20_gqox3")
texture_disabled = ExtResource("21_kymir")

[node name="map 18" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("21_ps72n")
texture_disabled = ExtResource("23_lfb2g")

[node name="map 19" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("22_1j2gv")
texture_disabled = ExtResource("25_j2b11")

[node name="map 20" type="TextureButton" parent="GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
disabled = true
texture_normal = ExtResource("23_a6n8w")
texture_disabled = ExtResource("27_u7mn1")

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = 32.0
offset_top = 860.0
offset_right = 160.0
offset_bottom = 928.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 171.0

[node name="Main_Menu_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"

[node name="Quit_Button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="Menu_Button" type="TextureButton" parent="."]
custom_minimum_size = Vector2(128, 128)
offset_left = 33.0
offset_top = 929.0
offset_right = 161.0
offset_bottom = 1057.0
texture_normal = ExtResource("4_72w8f")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="GridContainer/map 1" to="GridContainer" method="_on_map_1_pressed"]
[connection signal="pressed" from="GridContainer/map 2" to="GridContainer" method="_on_map_2_pressed"]
[connection signal="pressed" from="GridContainer/map 3" to="GridContainer" method="_on_map_3_pressed"]
[connection signal="pressed" from="GridContainer/map 4" to="GridContainer" method="_on_map_4_pressed"]
[connection signal="pressed" from="GridContainer/map 5" to="GridContainer" method="_on_map_5_pressed"]
[connection signal="pressed" from="GridContainer/map 6" to="GridContainer" method="_on_map_6_pressed"]
[connection signal="pressed" from="GridContainer/map 7" to="GridContainer" method="_on_map_7_pressed"]
[connection signal="pressed" from="GridContainer/map 8" to="GridContainer" method="_on_map_8_pressed"]
[connection signal="pressed" from="GridContainer/map 9" to="GridContainer" method="_on_map_9_pressed"]
[connection signal="pressed" from="GridContainer/map 10" to="GridContainer" method="_on_map_10_pressed"]
[connection signal="pressed" from="GridContainer/map 11" to="GridContainer" method="_on_map_11_pressed"]
[connection signal="pressed" from="GridContainer/map 12" to="GridContainer" method="_on_map_12_pressed"]
[connection signal="pressed" from="GridContainer/map 13" to="GridContainer" method="_on_map_13_pressed"]
[connection signal="pressed" from="GridContainer/map 14" to="GridContainer" method="_on_map_14_pressed"]
[connection signal="pressed" from="GridContainer/map 15" to="GridContainer" method="_on_map_15_pressed"]
[connection signal="pressed" from="GridContainer/map 16" to="GridContainer" method="_on_map_16_pressed"]
[connection signal="pressed" from="GridContainer/map 17" to="GridContainer" method="_on_map_17_pressed"]
[connection signal="pressed" from="GridContainer/map 18" to="GridContainer" method="_on_map_18_pressed"]
[connection signal="pressed" from="GridContainer/map 19" to="GridContainer" method="_on_map_19_pressed"]
[connection signal="pressed" from="GridContainer/map 20" to="GridContainer" method="_on_map_20_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Main_Menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit_Button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Menu_Button" to="." method="_on_menu_button_pressed"]
